--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,4 +38,8 @@ models:
             +materialized: table
         staging: 
             +materialized: view 
+    
+    snowflake_spend:
+      +enabled: true 
+      +schema: spend
 
